[gd_scene load_steps=5 format=3 uid="uid://chqqqa7i6n1en"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_nxr6k"]
[ext_resource type="Theme" uid="uid://qin8gj4wb2wr" path="res://assets/panel_theme.tres" id="2_qkj2r"]
[ext_resource type="PackedScene" uid="uid://i4aj2qk6glgq" path="res://ui/shop.tscn" id="3_nlmlf"]
[ext_resource type="PackedScene" uid="uid://c0ucco71dbkiq" path="res://ui/tutorial.tscn" id="4_56bi6"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_nxr6k")
metadata/_edit_lock_ = true
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -40.0
offset_right = 241.0
offset_bottom = -9.0
grow_vertical = 0
alignment = 1

[node name="Button" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Troop Data"

[node name="AddButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Buy fleet with money"
theme_override_font_sizes/font_size = 11
text = "Add troops"

[node name="StatsPanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 8.0
offset_top = 184.0
offset_right = 144.0
offset_bottom = 312.0
theme = ExtResource("2_qkj2r")
metadata/_edit_group_ = true

[node name="V" type="VBoxContainer" parent="CanvasLayer/StatsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -58.0
offset_right = 52.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Total" type="Label" parent="CanvasLayer/StatsPanel/V"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Total Troops: 250"
vertical_alignment = 1

[node name="Shoot" type="Label" parent="CanvasLayer/StatsPanel/V"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Shoot Type: 50"
vertical_alignment = 1

[node name="Laser" type="Label" parent="CanvasLayer/StatsPanel/V"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Laser Type: 50"
vertical_alignment = 1

[node name="Homing" type="Label" parent="CanvasLayer/StatsPanel/V"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Homing Type: 50"
vertical_alignment = 1

[node name="Shield" type="Label" parent="CanvasLayer/StatsPanel/V"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Shield Type: 50"
vertical_alignment = 1

[node name="Bomb" type="Label" parent="CanvasLayer/StatsPanel/V"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Bomb Type: 50"
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 8.0
offset_right = -6.0
offset_bottom = 32.0
grow_horizontal = 0
tooltip_text = "Feel free to check the tutorial."
theme_override_font_sizes/font_size = 12
text = "What to do?"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 101.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TurnLabel" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Turn: int"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Money: $int"
horizontal_alignment = 1

[node name="Shop" parent="CanvasLayer" instance=ExtResource("3_nlmlf")]
visible = false

[node name="TutorialScreen" parent="CanvasLayer" instance=ExtResource("4_56bi6")]
visible = false

[node name="Button2" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -48.0
offset_right = -12.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "END TURN"

[node name="Tip" type="Label" parent="CanvasLayer"]
offset_left = 424.0
offset_top = 248.0
offset_right = 628.0
offset_bottom = 289.0
theme_override_font_sizes/font_size = 8
text = "Pro-tip: You can earn a lot of money by fighting with
several territories at the same time to receive 
multiple counterattacks. But this will make 
everything more complicated, as you can see."

[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
